[NONE] Adjust test configuration to add JavaFX to classpath.